#
# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
#
# The contents of this file are subject to the terms of the
# Common Development and Distribution License.
# See the file LICENSING in this distribution for details.
#

filebenchdir = $(prefix)/filebench
scriptsdir = $(filebenchdir)/scripts

scripts_SCRIPTS = filebench_compare filebench_summary filebench_plot fs_flush

